Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -79,7 +79,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "keys = get_keys(\"/Users/YOUR_USERNAME_HERE/.secret/yelp_api.json\")\n",
+    "keys = get_keys(\"/Users/warrentai/Library/CloudStorage/iCloud Drive/Documents/.secret/yelp_api.json\")\n",
     "\n",
     "api_key = keys['api_key']\n",
     "\n",
